[package]
name = "error-chain-mini-derive"
version = "0.0.3"
authors = ["kngwyu <yuji.kngw.80s.revive@gmail.com>"]
description = "derives for error-chain-mini"
license = "MIT/Apache-2.0"
repository = "https://github.com/kngwyu/error-chain-mini"
keywords = ["error", "derive"]
categories = ["rust-patterns"]

[dependencies]
syn = "0.13.7"
quote = "0.5.2"
synstructure = "0.8.1"

[lib]
proc-macro = true